Cleared javac warnings
Added @Deprecated tags and replaced "new Integer(int)" calls with "Integer.valueOf(int)".